[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
lighthouse-beacon-node = { git = "https://github.com/pawanjay176/lighthouse", package = "beacon_node", rev = "def2498bc4114b4bd7933cf3bb9a45a555d24ede" } # Lighthouse for Mekong 
lighthouse-eth2 = { git = "https://github.com/pawanjay176/lighthouse", package = "eth2", rev = "def2498bc4114b4bd7933cf3bb9a45a555d24ede" } # Lighthouse for Mekong
lighthouse-types = { git = "https://github.com/pawanjay176/lighthouse", package = "types", rev = "def2498bc4114b4bd7933cf3bb9a45a555d24ede" } # Lighthouse for Mekong