[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
# Selected version for Mekong Testnet
# https://github.com/sigp/lighthouse/tree/87b72dec21759acfbc749220be3aee11ac91cdf3
lighthouse-beacon-node = { git = "https://github.com/sigp/lighthouse", package = "beacon_node", rev = "87b72dec21759acfbc749220be3aee11ac91cdf3" } 
lighthouse-eth2 = { git = "https://github.com/sigp/lighthouse", package = "eth2", rev = "87b72dec21759acfbc749220be3aee11ac91cdf3" }
lighthouse-types = { git = "https://github.com/sigp/lighthouse", package = "types", rev = "87b72dec21759acfbc749220be3aee11ac91cdf3" }