[package]
version = "0.1.0"
name = "consensp1us-host"
edition = "2021"
default-run = "eth-consensus"

[[bin]]
name = "eth-consensus"
path = "src/bin/main.rs"


[dependencies]
sp1-sdk = "3.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
beacon-lib = { path = "../lib" }
url = "2.3"
lighthouse-beacon-node.workspace = true
lighthouse-eth2.workspace = true
lighthouse-types.workspace = true
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
sp1-helper = "3.0.0"
